tests/sksl/errors/ContinueOutsideLoop.sksl
void outside_for()   { for (;;) {} continue; }
void inside_switch() { switch (1) { default: continue; } }
